compiler/test-data/parser/theme/errors/asset_with_init.frel
module theme.errors.asset_with_init

theme AppTheme {
    primaryColor : asset Color = #FF0000
}
